--- a/full metal alchemist game/fma.html
+++ b/full metal alchemist game/fma.html
@@ -4,56 +4,36 @@
     <meta charset="utf-8">
     <title>FMA</title>
 
-    <script
-  src="https://code.jquery.com/jquery-2.2.4.min.js"
-  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-  crossorigin="anonymous"></script>
-
     <link rel="stylesheet" type="text/css" href="fma.css"></style>
     <!-- <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"></style> -->
   </head>
   <body>
     <h2>FMA RPG</h2>
 <div class="container" >
-  <!-- <div class="row">
-    <div class="col-lg-12"> -->
-    <!-- <div id="envyPts" class="characters">
-      <p>Envy</p>
-      <img src="envy.png">
-      <p>100</p>
-    </div> -->
-    <div class="characters" id="pridePts">
-      <p>Pride</p>
-      <img src="pride.png">
-      <p>100</p>
+    <div class="characters">
+      <p id="prideName"></p>
+      <img src="" id="prideImage">
+      <p id="pridePts"></p>
     </div>
-    <div class="characters" id="lustPts">
-      <p>Lust</p>
-      <img src="lust.png">
-      <p>100</p>
+    <div class="characters" >
+      <p id="lustName"></p>
+      <img id="lustImage" src="">
+      <p id="lustPts"></p>
     </div>
-    <!-- <div class="characters" id="slothPts">
-      <p>Sloth</p>
-      <img src="sloth.png">
-      <p>100</p>
-    </div> -->
-    <div class="characters" id="gluttonyPts">
-      <p>Gluttony</p>
-      <img src="gluttony.png">
-      <p>100</p>
+    <div class="characters" >
+      <p id="gluttonyName"></p>
+      <img src="" id="gluttonyImage" >
+      <p id="gluttonyPts"></p>
     </div>
-    <div class="characters" id="greedPts">
-      <p>Greed</p>
-      <img src="greed.png">
-      <p>100</p>
+    <div class="characters" >
+      <p id="greedName"></p>
+      <img src="" id="greedImage">
+      <p id="greedPts"></p>
     </div>
-    <!-- <div class="characters" id="wrathPts">
-      <p>Wrath</p>
-      <img src="wrath.png">
-      <p>100</p> -->
-    </div>
+</div>
     <p> Your Character</p>
-    <span id="hero">
+    <span id="hero" >
+      <img src="">
 
     </span>
     <div>
@@ -67,7 +47,10 @@
     </div>
     <span id="gameOver"><span>
 
-</div>
+</div><script
+  src="https://code.jquery.com/jquery-3.3.1.js"
+  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+  crossorigin="anonymous"></script>
 <script type="text/javascript" src="fma.js"></script>
   </body>
 </html>
