add non-working Reset button

--- a/full metal alchemist game/fma.html
+++ b/full metal alchemist game/fma.html
@@ -34,17 +34,16 @@
     <p> Your Character</p>
     <span id="hero" >
       <img src="">
-
     </span>
-    <div>
-      <p> Enemies Available To Attack Fight Section</p>
+  <div>
+    <p> Enemies Available To Attack Fight Section</p>
       <span id="enemy"></span>
-
       <button id="attack">Attack</button>
-    </div>
+      <button id="reset">Reset</button>
+  </div>
     <p>Defender</p>
-    <div id="defender">
-    </div>
+  <div id="defender">
+  </div>
     <span id="gameOver"><span>
 
 </div><script
