--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"></style> -->
   </head>
   <body>
-    <h2>FMA RPG</h2>
+    <h1>FullMetal Alchemist RPG</h1>
 <div class="container" >
     <div class="characters">
       <p id="prideName"></p>
@@ -31,20 +31,22 @@
       <p id="greedPts"></p>
     </div>
 </div>
-    <p> Your Character</p>
+    <p class="title"> Your Character</p>
     <span id="hero" >
-      <img src="">
+
     </span>
   <div>
-    <p> Enemies Available To Attack Fight Section</p>
+    <p class="title"> Enemies Available To Attack Fight Section</p>
+
       <span id="enemy"></span>
+      <p class="title"> Fight Section</p>
       <button id="attack">Attack</button>
       <button id="reset">Reset</button>
   </div>
-    <p>Defender</p>
+    <p class="title">Defender</p>
   <div id="defender">
   </div>
-    <span id="gameOver"><span>
+    <span class="title" id="gameOver"><span>
 
 </div><script
   src="https://code.jquery.com/jquery-3.3.1.js"
