--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <title>FMA</title>
 
-    <link rel="stylesheet" type="text/css" href="fma.css"></style>
-    <!-- <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"></style> -->
+    <link rel="stylesheet" type="text/css" href="fma.css">
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
   </head>
   <body>
-    <h1>FullMetal Alchemist RPG</h1>
+    <h3>FullMetal Alchemist RPG</h3>
 <div class="container" >
-    <div class="characters">
+  <div class="row col-sm-6 col-md-12">
+    <div class="characters ">
       <p id="prideName"></p>
       <img src="" id="prideImage">
       <p id="pridePts"></p>
@@ -29,24 +30,39 @@
       <p id="greedName"></p>
       <img src="" id="greedImage">
       <p id="greedPts"></p>
+      </div>
     </div>
 </div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6">
     <p class="title"> Your Character</p>
-    <span id="hero" >
-
-    </span>
-  <div>
+    <span id="hero" ></span>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class= "row">
+    <div class= "col-xs-6 col-md-12">
     <p class="title"> Enemies Available To Attack Fight Section</p>
-
       <span id="enemy"></span>
       <p class="title"> Fight Section</p>
       <button id="attack">Attack</button>
       <button id="reset">Reset</button>
+    </div>
+    </div>
   </div>
-    <p class="title">Defender</p>
-  <div id="defender">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6">
+        <p class="title">Defender</p>
+        <div id="defender">
+
+      </div>
+      <span class="title" id="gameOver"><span>
+    </div>
   </div>
-    <span class="title" id="gameOver"><span>
+
 
 </div><script
   src="https://code.jquery.com/jquery-3.3.1.js"
