--- a/index.html
+++ b/index.html
@@ -1,35 +1,50 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FMA</title>
 
     <link rel="stylesheet" type="text/css" href="fma.css">
     <!-- <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"></style> -->
   </head>
   <body>
-    <h1>FullMetal Alchemist RPG</h1>
+<h1>FullMetal Alchemist RPG</h1>
 <div class="container" >
-    <div class="characters">
-      <p id="prideName"></p>
-      <img src="" id="prideImage">
-      <p id="pridePts"></p>
+  <div class="row">
+
+    <div class="col-sm-6">
+
+</div>
+</div>
+  <div class="row">
+    <div class="col-sm-6 col-md-12 col-lg-1">
+      <div class="characters">
+        <p id="prideName"></p>
+        <img src="" id="prideImage">
+        <p id="pridePts"></p>
+      </div>
+      <div class="characters" >
+        <p id="lustName"></p>
+        <img id="lustImage" src="">
+        <p id="lustPts"></p>
+      </div>
+  </div>
+</div>
+      <div class="row">
+    <div class="col-sm-6 col-md-12 col-lg-1">
+      <div class="characters" >
+        <p id="gluttonyName"></p>
+        <img src="" id="gluttonyImage" >
+        <p id="gluttonyPts"></p>
+      </div>
+      <div class="characters" >
+        <p id="greedName"></p>
+        <img src="" id="greedImage">
+        <p id="greedPts"></p>
+      </div>
+      </div>
     </div>
-    <div class="characters" >
-      <p id="lustName"></p>
-      <img id="lustImage" src="">
-      <p id="lustPts"></p>
-    </div>
-    <div class="characters" >
-      <p id="gluttonyName"></p>
-      <img src="" id="gluttonyImage" >
-      <p id="gluttonyPts"></p>
-    </div>
-    <div class="characters" >
-      <p id="greedName"></p>
-      <img src="" id="greedImage">
-      <p id="greedPts"></p>
-    </div>
+
 </div>
     <p class="title"> Your Character</p>
     <span id="hero" ></span>
